--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <title>Mario Jump</title>
 
 </head>
-<body>
+<body onload="">
     
     <div class="game-board">
 
@@ -18,7 +18,7 @@
         <img src="./images/clouds.png" alt="" class="clouds">
         <img src="images/mario.gif" alt="" class="mario">
         <img src="images/pipe.png" alt="" class="pipe">
-        <!-- <audio class="audio" src="Super-Mario.mp3" autoplay loop ></audio> -->
+        <!-- <audio class="audio" src="Super-Mario.mp3" autoplay="autoplay" loop ></audio> -->
         
     </div>
 
